--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
                 <li>PHP 7, Yii, Laravel, Composer</li>
                 <li>JavaScript, Twitter Bootstrap, JQuery</li>
-                <li>PostgreSQL, MySQL, Redis, Elasticsearch</li>
+                <li>PostgreSQL, MySQL, Redis, ElasticSearch</li>
                 <li>RabbitMQ</li>
                 <li>Linux, Docker, Git</li>
             </ul>
@@ -328,6 +328,22 @@
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+                <div class="columns portfolio-item">
+                    <div class="item-wrap">
+
+                        <a href="#modal-18" title="">
+                            <img alt="" src="images/portfolio/online-library/1.png">
+                            <div class="overlay">
+                                <div class="portfolio-item-meta">
+                                    <h5>Online Library</h5>
+                                    <p>PHP, Laravel, Node, Vue, Bootstrap, PostgreSQL, Redis, ElasticSearch, MongoDB, Docker</p>
+                                </div>
+                            </div>
+                            <div class="link-icon"><i class="icon-plus"></i></div>
+                        </a>
+
+                    </div>
+                </div>  <!-- item end -->
 
                 <div class="columns portfolio-item">
                     <div class="item-wrap">
@@ -384,7 +400,7 @@
                     <div class="item-wrap">
 
                         <a href="#modal-14" title="">
-                            <img alt="" src="images/portfolio/electronic_queue/1.png">
+                            <img alt="" src="images/portfolio/electronic-queue/1.png">
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>Электронная очередь</h5>
@@ -401,7 +417,7 @@
                     <div class="item-wrap">
 
                         <a href="#modal-13" title="">
-                            <img alt="" src="images/portfolio/own_radio/1.png">
+                            <img alt="" src="images/portfolio/own-radio/1.png">
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>OwnRadio</h5>
@@ -486,7 +502,7 @@
                     <div class="item-wrap">
 
                         <a href="#modal-08" title="">
-                            <img alt="" src="images/portfolio/in_out_msg/1.png">
+                            <img alt="" src="images/portfolio/in-out-msg/1.png">
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>Регистрации входящей и исходящей корреспонденции</h5>
@@ -537,7 +553,7 @@
                     <div class="item-wrap">
 
                         <a href="#modal-05" title="">
-                            <img alt="" src="images/portfolio/auth_module/1.png">
+                            <img alt="" src="images/portfolio/auth-module/1.png">
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>Authorization module</h5>
@@ -554,7 +570,7 @@
                     <div class="item-wrap">
 
                         <a href="#modal-04" title="">
-                            <img alt="" src="images/portfolio/tests_loader/1.png">
+                            <img alt="" src="images/portfolio/tests-loader/1.png">
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>TestsLoader</h5>
@@ -571,7 +587,7 @@
                     <div class="item-wrap">
 
                         <a href="#modal-03" title="">
-                            <img alt="" src="images/portfolio/rec_video/1.png">
+                            <img alt="" src="images/portfolio/rec-video/1.png">
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>RecVideo</h5>
@@ -588,7 +604,7 @@
                     <div class="item-wrap">
 
                         <a href="#modal-02" title="">
-                            <img alt="" src="images/portfolio/fasm_editor/1.png">
+                            <img alt="" src="images/portfolio/fasm-editor/1.png">
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>FASM Editor</h5>
@@ -647,7 +663,7 @@
 
         <div id="modal-02" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/fasm_editor/1.png" alt=""/>
+            <img class="scale-with-grid" src="images/portfolio/fasm-editor/1.png" alt=""/>
 
             <div class="description-box">
                 <h4>FASM Editor</h4>
@@ -659,7 +675,7 @@
             </div>
 
             <div class="link-box">
-                <a href="portfolio-pages/fasm_editor.html">Подробнее</a>
+                <a href="portfolio-pages/fasm-editor.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
@@ -667,7 +683,7 @@
 
         <div id="modal-03" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/rec_video/1.png" alt=""/>
+            <img class="scale-with-grid" src="images/portfolio/rec-video/1.png" alt=""/>
 
             <div class="description-box">
                 <h4>RecVideo</h4>
@@ -678,7 +694,7 @@
             </div>
 
             <div class="link-box">
-                <a href="portfolio-pages/rec_video.html">Подробнее</a>
+                <a href="portfolio-pages/rec-video.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
@@ -686,7 +702,7 @@
 
         <div id="modal-04" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/tests_loader/1.png" alt=""/>
+            <img class="scale-with-grid" src="images/portfolio/tests-loader/1.png" alt=""/>
 
             <div class="description-box">
                 <h4>TestsLoader</h4>
@@ -697,7 +713,7 @@
             </div>
 
             <div class="link-box">
-                <a href="portfolio-pages/tests_loader.html">Подробнее</a>
+                <a href="portfolio-pages/tests-loader.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
@@ -705,7 +721,7 @@
 
         <div id="modal-05" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/auth_module/1.png" alt=""/>
+            <img class="scale-with-grid" src="images/portfolio/auth-module/1.png" alt=""/>
 
             <div class="description-box">
                 <h4>Модуль авторизации и регистрации</h4>
@@ -716,7 +732,7 @@
             </div>
 
             <div class="link-box">
-                <a href="portfolio-pages/auth_module.html">Подробнее</a>
+                <a href="portfolio-pages/auth-module.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
@@ -762,7 +778,7 @@
 
         <div id="modal-08" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/in_out_msg/1.png" alt=""/>
+            <img class="scale-with-grid" src="images/portfolio/in-out-msg/1.png" alt=""/>
 
             <div class="description-box">
                 <h4>Регистрации входящей и исходящей корреспонденции</h4>
@@ -773,7 +789,7 @@
             </div>
 
             <div class="link-box">
-                <a href="portfolio-pages/in_out_msg.html">Подробнее</a>
+                <a href="portfolio-pages/in-out-msg.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
@@ -857,7 +873,7 @@
 
         <div id="modal-13" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/own_radio/1.png" alt=""/>
+            <img class="scale-with-grid" src="images/portfolio/own-radio/1.png" alt=""/>
 
             <div class="description-box">
                 <h4>OwnRadio</h4>
@@ -868,7 +884,7 @@
             </div>
 
             <div class="link-box">
-                <a href="portfolio-pages/own_radio.html">Подробнее</a>
+                <a href="portfolio-pages/own-radio.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
@@ -876,7 +892,7 @@
 
         <div id="modal-14" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/electronic_queue/1.png" alt=""/>
+            <img class="scale-with-grid" src="images/portfolio/electronic-queue/1.png" alt=""/>
 
             <div class="description-box">
                 <h4>Электронная очередь</h4>
@@ -887,7 +903,7 @@
             </div>
 
             <div class="link-box">
-                <a href="portfolio-pages/electronic_queue.html">Подробнее</a>
+                <a href="portfolio-pages/electronic-queue.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
@@ -945,6 +961,25 @@
 
             <div class="link-box">
                 <a href="portfolio-pages/bellone.html">Подробнее</a>
+                <a class="popup-modal-dismiss">Закрыть</a>
+            </div>
+
+        </div><!-- modal-16 End -->
+
+        <div id="modal-18" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/online-library/1.png" alt=""/>
+
+            <div class="description-box">
+                <h4>Online Library</h4>
+                <p>
+                    Онлайн библиотека предназначена для поиска и просмотра книг по различным жанрам.
+                </p>
+                <span class="categories"><i class="fa fa-tag"></i>PHP, Laravel, Node, Vue, Bootstrap, PostgreSQL, Redis, ElasticSearch, MongoDB, Docker</span>
+            </div>
+
+            <div class="link-box">
+                <a href="portfolio-pages/online-library.html">Подробнее</a>
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
