--- a/portfolio-pages/auth-module.html
+++ b/portfolio-pages/auth-module.html
@@ -28,65 +28,29 @@
     <section id="portfolio">
         <div class="row skill">
             <div style="text-align: center">
-                <h2>Регистрации входящей и исходящей корреспонденции</h2>
+                <h2>Модуль авторизации и регистрации</h2>
             </div>
             <p>
-                Разработал веб-приложение "Регистрации входящей и исходящей корреспонденции" для отдела кадров
-                Костанайского инженерно-экономического университета им. М. Дулатова. Программа позволяет вести учет и структуризацию корреспонденции.
-            </p>
-            Технологии:
-            <ul class="disc">
-                <li>JSP, JSTL, Twitter Bootstrap, JQuery</li>
-                <li>Java, Spring (Core, IoC, MVC), log4j, JPA/Hibernate, Apache POI, JUnit, Maven, MySQL</li>
-                <li>Git</li>
-            </ul>
-            Программа позволяет:
-            <ul class="disc">
-                <li>Фиксировать входящие/исходящие письма и полученные ответы</li>
-                <li>Поиск по выбранному столбцу</li>
-                <li>Фильтровать информацию по типу письма с указанием года</li>
-                <li>Экспорт данных в Excel</li>
-            </ul>
-            <div style="text-align: center">
-                <img src="../images/portfolio/in_out_msg/1.png">
-            </div>
-            <p>
-                Страница регистрации нового письма.
+                Разработал модуль авторизации и регистрации. Движок сайта реализован с применением паттерна MVC.
+                Были реализованы такие возможности как: смена языков (переводы лежат в БД), проверка корректности, валидности ввода данных.
+                Технологии: PHP (PSR-1, PSR-2, PSR-4, PHPUnit), JavaScript (Core), CSS, HTML, MySQL. <a target="_blank" href="https://github.com/Researcher86/php_mvc">GitHub</a>
             </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/in_out_msg/2.png">
+                <img src="../images/portfolio/auth-module/1.png">
             </div>
-            <p>
-                Страница создания ответного письма.
-            </p>
+            <br>
             <div style="text-align: center">
-                <img src="../images/portfolio/in_out_msg/3.png">
+                <img src="../images/portfolio/auth-module/2.png">
             </div>
-            <p>
-                Страница редактирования входящих/исходящих писем и ответов.
-            </p>
+            <br>
             <div style="text-align: center">
-                <img src="../images/portfolio/in_out_msg/4.png">
+                <img src="../images/portfolio/auth-module/3.png">
             </div>
-            <p>
-                Проверка на корректность ввода данных.
-            </p>
+            <br>
             <div style="text-align: center">
-                <img src="../images/portfolio/in_out_msg/5.png">
+                <img src="../images/portfolio/auth-module/4.png">
             </div>
-            <p>
-                Окно для подтверждения удаления.
-            </p>
-            <div style="text-align: center">
-                <img src="../images/portfolio/in_out_msg/6.png">
-            </div>
-            <p>
-                Пример Excel отчета.
-            </p>
-            <div style="text-align: center">
-                <img src="../images/portfolio/in_out_msg/7.png">
-            </div>
-           </div>
+        </div>
     </section>
 
     <footer>
