--- a/portfolio-pages/fasm-editor.html
+++ b/portfolio-pages/fasm-editor.html
@@ -28,29 +28,55 @@
     <section id="portfolio">
         <div class="row skill">
             <div style="text-align: center">
-                <h2>Модуль авторизации и регистрации</h2>
+                <h2>FASM Editor</h2>
             </div>
             <p>
-                Разработал модуль авторизации и регистрации. Движок сайта реализован с применением паттерна MVC.
-                Были реализованы такие возможности как: смена языков (переводы лежат в БД), проверка корректности, валидности ввода данных.
-                Технологии: PHP (PSR-1, PSR-2, PSR-4, PHPUnit), JavaScript (Core), CSS, HTML, MySQL. <a target="_blank" href="https://github.com/Researcher86/php_mvc">GitHub</a>
+                Разработал бесплатную программу FASM Editor для себя и сообщества ассемблер программистов.
+                Данная программа была написана на Delphi, для удобной разработки программ на ассемблере.
+                В программе был реализован синтаксический анализатор, подсветка кода, авто-дополнение кода, генерация списка экспортируемых функций из DLL.
+                Программу можно бесплатно скачать с сайта <a target="_blank" href="http://asmworld.ru/">http://asmworld.ru</a>.
             </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/auth_module/1.png">
+                <img src="../images/portfolio/fasm-editor/1.png">
             </div>
             <br>
             <div style="text-align: center">
-                <img src="../images/portfolio/auth_module/2.png">
+                <img src="../images/portfolio/fasm-editor/2.png">
             </div>
             <br>
             <div style="text-align: center">
-                <img src="../images/portfolio/auth_module/3.png">
+                <img src="../images/portfolio/fasm-editor/3.png">
             </div>
             <br>
             <div style="text-align: center">
-                <img src="../images/portfolio/auth_module/4.png">
+                <img src="../images/portfolio/fasm-editor/4.png">
             </div>
-        </div>
+            <br>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/5.png">
+            </div>
+            <br>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/6.png">
+            </div>
+            <br>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/7.png">
+            </div>
+            <br>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/8.png">
+            </div>
+            <br>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/9.png">
+            </div>
+            <br>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/10.png">
+            </div>
+
+           </div>
     </section>
 
     <footer>
