--- a/portfolio-pages/in-out-msg.html
+++ b/portfolio-pages/in-out-msg.html
@@ -28,54 +28,64 @@
     <section id="portfolio">
         <div class="row skill">
             <div style="text-align: center">
-                <h2>FASM Editor</h2>
+                <h2>Регистрации входящей и исходящей корреспонденции</h2>
             </div>
             <p>
-                Разработал бесплатную программу FASM Editor для себя и сообщества ассемблер программистов.
-                Данная программа была написана на Delphi, для удобной разработки программ на ассемблере.
-                В программе был реализован синтаксический анализатор, подсветка кода, авто-дополнение кода, генерация списка экспортируемых функций из DLL.
-                Программу можно бесплатно скачать с сайта <a target="_blank" href="http://asmworld.ru/">http://asmworld.ru</a>.
+                Разработал веб-приложение "Регистрации входящей и исходящей корреспонденции" для отдела кадров
+                Костанайского инженерно-экономического университета им. М. Дулатова. Программа позволяет вести учет и структуризацию корреспонденции.
+            </p>
+            Технологии:
+            <ul class="disc">
+                <li>JSP, JSTL, Twitter Bootstrap, JQuery</li>
+                <li>Java, Spring (Core, IoC, MVC), log4j, JPA/Hibernate, Apache POI, JUnit, Maven, MySQL</li>
+                <li>Git</li>
+            </ul>
+            Программа позволяет:
+            <ul class="disc">
+                <li>Фиксировать входящие/исходящие письма и полученные ответы</li>
+                <li>Поиск по выбранному столбцу</li>
+                <li>Фильтровать информацию по типу письма с указанием года</li>
+                <li>Экспорт данных в Excel</li>
+            </ul>
+            <div style="text-align: center">
+                <img src="../images/portfolio/in-out-msg/1.png">
+            </div>
+            <p>
+                Страница регистрации нового письма.
             </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/1.png">
+                <img src="../images/portfolio/in-out-msg/2.png">
             </div>
-            <br>
+            <p>
+                Страница создания ответного письма.
+            </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/2.png">
+                <img src="../images/portfolio/in-out-msg/3.png">
             </div>
-            <br>
+            <p>
+                Страница редактирования входящих/исходящих писем и ответов.
+            </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/3.png">
+                <img src="../images/portfolio/in-out-msg/4.png">
             </div>
-            <br>
+            <p>
+                Проверка на корректность ввода данных.
+            </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/4.png">
+                <img src="../images/portfolio/in-out-msg/5.png">
             </div>
-            <br>
+            <p>
+                Окно для подтверждения удаления.
+            </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/5.png">
+                <img src="../images/portfolio/in-out-msg/6.png">
             </div>
-            <br>
+            <p>
+                Пример Excel отчета.
+            </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/6.png">
+                <img src="../images/portfolio/in-out-msg/7.png">
             </div>
-            <br>
-            <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/7.png">
-            </div>
-            <br>
-            <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/8.png">
-            </div>
-            <br>
-            <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/9.png">
-            </div>
-            <br>
-            <div style="text-align: center">
-                <img src="../images/portfolio/fasm_editor/10.png">
-            </div>
-
            </div>
     </section>
 
