--- a/portfolio-pages/online-library.html
+++ b/portfolio-pages/online-library.html
@@ -28,39 +28,23 @@
     <section id="portfolio">
         <div class="row skill">
             <div style="text-align: center">
-                <h2>TestsLoader</h2>
+                <h2>Online Library</h2>
             </div>
             <p>
-                Разработал программу на Delphi для полуавтоматической загрузки тестовых заданий в базу данных.
-                Программа считывает документ в формате *.doc, *.docx, создает временную БД MS Access,
-                генерирует HTML для пред-просмотра и если пользователя все устраивает, грузит все тесты в БД MySQL.
-                Программа была разработана для Костанайского инженерно-экономического университета им. М. Дулатова.
+                <a target="_blank" href="https://github.com/Researcher86/php-online-library">Онлайн библиотека</a> предназначена для поиска и просмотра книг по различным жанрам.
+                Система разрабатывается в качестве Open Source решения для каталогизации, упорядочивания, поиска книг.
+                Технологический стек: PHP, Laravel, Node, Vue, Bootstrap, PostgreSQL, Redis, ElasticSearch, MongoDB, Docker.
             </p>
-            <p>
-                Главное окно программы.
-            </p>
+            <h2>Главна</h2>
             <div style="text-align: center">
-                <img src="../images/portfolio/tests_loader/1.png">
+                <img src="../images/portfolio/online-library/1.png">
             </div>
-            <p>
-                Окно предварительного просмотра.
-            </p>
+            <br>
+            <h2>Страница результатов поиска</h2>
             <div style="text-align: center">
-                <img src="../images/portfolio/tests_loader/2.png">
+                <img src="../images/portfolio/online-library/2.png">
             </div>
-            <p>
-                Окно просмотра всех тестовых вопросов в БД.
-            </p>
-            <div style="text-align: center">
-                <img src="../images/portfolio/tests_loader/3.png">
-            </div>
-            <p>
-                Шаблон для забивки тестовых заданий.
-            </p>
-            <div style="text-align: center">
-                <img src="../images/portfolio/tests_loader/4.png">
-            </div>
-        </div>
+           </div>
     </section>
 
     <footer>
