--- a/portfolio-pages/tests-loader.html
+++ b/portfolio-pages/tests-loader.html
@@ -28,18 +28,39 @@
     <section id="portfolio">
         <div class="row skill">
             <div style="text-align: center">
-                <h2>OwnRadio</h2>
+                <h2>TestsLoader</h2>
             </div>
             <p>
-                Принимал участие в разработке RESTful веб-сервиса бесплатного онлайн радио <a target="_blank" href="http://ownradio.ru">ownRadio</a>.
-                Система имеет нативные приложения для iOS, Windows, Android, и позволяет слушать музыку без постоянного доступа к сети интернет,
-                вся прослушанная музыка кэшируется на устройстве. Используемые технологии: Java, Spring Boot, Maven, JUnit, Hibernate, PostgreSQL (PL/pgSQL).
-                Приложение разработано в ООО "Интегрикс".
+                Разработал программу на Delphi для полуавтоматической загрузки тестовых заданий в базу данных.
+                Программа считывает документ в формате *.doc, *.docx, создает временную БД MS Access,
+                генерирует HTML для пред-просмотра и если пользователя все устраивает, грузит все тесты в БД MySQL.
+                Программа была разработана для Костанайского инженерно-экономического университета им. М. Дулатова.
+            </p>
+            <p>
+                Главное окно программы.
             </p>
             <div style="text-align: center">
-                <img src="../images/portfolio/own_radio/1.png">
+                <img src="../images/portfolio/tests-loader/1.png">
             </div>
-           </div>
+            <p>
+                Окно предварительного просмотра.
+            </p>
+            <div style="text-align: center">
+                <img src="../images/portfolio/tests-loader/2.png">
+            </div>
+            <p>
+                Окно просмотра всех тестовых вопросов в БД.
+            </p>
+            <div style="text-align: center">
+                <img src="../images/portfolio/tests-loader/3.png">
+            </div>
+            <p>
+                Шаблон для забивки тестовых заданий.
+            </p>
+            <div style="text-align: center">
+                <img src="../images/portfolio/tests-loader/4.png">
+            </div>
+        </div>
     </section>
 
     <footer>
