--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 для хранения данных приложения использую <span class="select">SQL</span> и <span class="select">NoSQL</span> решения.
             </p>
             <p>
-                <span class="select">Опыт.</span> Занимаюсь программированием <span class="select">10+</span> лет из них <span class="select">4+</span> года профессионально.
+                <span class="select">Опыт.</span> Занимаюсь программированием <span class="select">10+</span> лет из них <span class="select">5+</span> года профессионально.
             </p>
 
             <div class="row">
@@ -302,7 +302,7 @@
             <ul class="disc">
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
-                <li>PHP 7, Yii, Laravel, Composer</li>
+                <li>PHP 7, Yii, Symfony, Laravel, Composer</li>
                 <li>JavaScript, Twitter Bootstrap, JQuery</li>
                 <li>PostgreSQL, MySQL, Redis, ElasticSearch</li>
                 <li>RabbitMQ</li>
