--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="three columns">
 
-            <img class="profile-pic" src="images/my.jpeg" alt=""/>
+            <img class="profile-pic" src="images/my.jpg" alt=""/>
 
         </div>
 
