--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="twelve columns">
 
                     <h3>Нью-Йорк, Virtual Health</h3>
-                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">10.2018 - по настоящее время</em>
+                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">10.2018 - 10.2019</em>
                     </p>
 
                     <p>
