--- a/index.html
+++ b/index.html
@@ -191,6 +191,22 @@
 
                 <div class="twelve columns">
 
+                    <h3>США, NameSilo</h3>
+                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2020 - по настоящее время</em>
+                    </p>
+
+                    <p>
+                        Поддержка системы регистрации доменных имен.
+                    </p>
+
+                </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+                <div class="twelve columns">
+
                     <h3>Нью-Йорк, Virtual Health</h3>
                     <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">10.2018 - 10.2019</em>
                     </p>
@@ -202,6 +218,7 @@
                 </div>
 
             </div> <!-- item end -->
+
             <div class="row item">
 
                 <div class="twelve columns">
