--- a/index.html
+++ b/index.html
@@ -335,10 +335,27 @@
 
         <div class="twelve columns collapsed">
 
-            <h1>Посмотрите некоторые мои работы.</h1>
+            <h1>Посмотрите мои работы.</h1>
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+                <div class="columns portfolio-item">
+                    <div class="item-wrap">
+
+                        <a href="#modal-19" title="">
+                            <img alt="" src="images/portfolio/namesilo/1.png">
+                            <div class="overlay">
+                                <div class="portfolio-item-meta">
+                                    <h5>NameSilo</h5>
+                                    <p>PHP, MySQL, Redis, Yii, Symfony, Docker</p>
+                                </div>
+                            </div>
+                            <div class="link-icon"><i class="icon-plus"></i></div>
+                        </a>
+
+                    </div>
+                </div>  <!-- item end -->
+
                 <div class="columns portfolio-item">
                     <div class="item-wrap">
 
@@ -975,7 +992,7 @@
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
-        </div><!-- modal-16 End -->
+        </div><!-- modal-17 End -->
 
         <div id="modal-18" class="popup-modal mfp-hide">
 
@@ -994,7 +1011,26 @@
                 <a class="popup-modal-dismiss">Закрыть</a>
             </div>
 
-        </div><!-- modal-16 End -->
+        </div><!-- modal-18 End -->
+
+        <div id="modal-19" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/namesilo/2.png" alt=""/>
+
+            <div class="description-box">
+                <h4>NameSilo</h4>
+                <p>
+                    Система регистрации доменных имен.
+                </p>
+                <span class="categories"><i class="fa fa-tag"></i>PHP, MySQL, Redis, Yii, Symfony, Docker</span>
+            </div>
+
+            <div class="link-box">
+                <a href="portfolio-pages/namesilo.html">Подробнее</a>
+                <a class="popup-modal-dismiss">Закрыть</a>
+            </div>
+
+        </div><!-- modal-19 End -->
 
     </div> <!-- row End -->
 
