--- a/portfolio-pages/fasm-editor.html
+++ b/portfolio-pages/fasm-editor.html
@@ -31,10 +31,12 @@
                 <h2>FASM Editor</h2>
             </div>
             <p>
-                Разработал бесплатную программу FASM Editor для себя и сообщества ассемблер программистов.
-                Данная программа была написана на Delphi, для удобной разработки программ на ассемблере.
-                В программе был реализован синтаксический анализатор, подсветка кода, авто-дополнение кода, генерация списка экспортируемых функций из DLL.
-                Программу можно бесплатно скачать с сайта <a target="_blank" href="http://asmworld.ru/">http://asmworld.ru</a>.
+                FASM Editor - редактор ASM кода, предназначен для удобства разработки,
+                был разработана для себя и сообщества ассемблер программистов.
+                Данная программа была написана на Delphi.
+                В программе был реализован синтаксический анализатор,
+                подсветка кода, авто-дополнение кода,
+                генерация списка экспортируемых функций из DLL.
             </p>
             <div style="text-align: center">
                 <img src="../images/portfolio/fasm-editor/1.png">
