--- a/portfolio-pages/fasm-editor.html
+++ b/portfolio-pages/fasm-editor.html
@@ -73,6 +73,13 @@
             <div style="text-align: center">
                 <img src="../images/portfolio/fasm-editor/9.png">
             </div>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/11.png">
+            </div>
+            <br>
+            <div style="text-align: center">
+                <img src="../images/portfolio/fasm-editor/12.png">
+            </div>
             <br>
             <div style="text-align: center">
                 <img src="../images/portfolio/fasm-editor/10.png">
