--- a/portfolio-pages/fasm-editor.html
+++ b/portfolio-pages/fasm-editor.html
@@ -31,7 +31,7 @@
                 <h2>FASM Editor</h2>
             </div>
             <p>
-                FASM Editor - редактор ASM кода, предназначен для удобства разработки,
+                <a target="_blank" href="https://github.com/Researcher86/fasm-editor">FASM Editor</a> - редактор ASM кода, предназначен для удобства разработки,
                 был разработана для себя и сообщества ассемблер программистов.
                 Данная программа была написана на Delphi.
                 В программе был реализован синтаксический анализатор,
