--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="row item">
                 <ul class="disc">
                     <li>Разработал бесплатную программу "FASM Editor" для себя и сообщества ассемблер программистов. Программу можно бесплатно скачать с сайта
-                        <a target="_blank" href="http://asmworld.ru/">http://asmworld.ru/</a></li>
+                        <a target="_blank" href="https://github.com/Researcher86/fasm-editor">Ссылка</a></li>
                     <li>Разработал информационную систему "Антиплагиат", тем самым университет КИнЭУ сэкономил денежные средства на приобретение аналогичной программы</li>
                 </ul>
 
@@ -697,7 +697,7 @@
                 <h4>FASM Editor</h4>
                 <p>
                     Редактор исходного кода.
-                    <a target="_blank" href="http://asmworld.ru/">http://asmworld.ru</a>.
+                    <a target="_blank" href="https://github.com/Researcher86/fasm-editor">Ссылка</a>.
                 </p>
                 <span class="categories"><i class="fa fa-tag"></i>Delphi</span>
             </div>
