--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <li><a target="_blank" href="https://github.com/Researcher86"><i class="fa fa-github"></i></a></li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/researcher2286"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="skype:alpenov_tanat?chat"><i class="fa fa-skype"></i></a></li>
+                <li><a target="_blank" href="https://t.me/researcher2286"><i class="fa fa-telegram"></i></a></li>
             </ul>
         </div>
     </div>
