--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="twelve columns">
 
                     <h3>США, NameSilo</h3>
-                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2020 - по настоящее время</em>
+                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2020 - 12.2020</em>
                     </p>
                     <p>
                         Поддержка системы регистрации доменных имен.
