--- a/index.html
+++ b/index.html
@@ -173,6 +173,55 @@
 
             </div> <!-- item end -->
 
+            <div class="row item">
+                <div class="twelve columns">
+                <h3>ИНТУИТ</h3>
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100825887">
+                        <img src="images/portfolio/certificates/INTUIT-1.jpg" alt="Введение в СУБД MySQL">
+                    </a>
+                </div>
+            </div> <!-- item end -->
+
+            <div class="row item">
+                <div class="twelve columns">
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100825881">
+                        <img src="images/portfolio/certificates/INTUIT-2.jpg" alt="Разработка клиентских приложений Web-сайтов">
+                    </a>
+                </div>
+            </div> <!-- item end -->
+
+            <div class="row item">
+                <div class="twelve columns">
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781849">
+                        <img src="images/portfolio/certificates/INTUIT-3.jpg" alt="Введение в HTML и CSS">
+                    </a>
+                </div>
+            </div> <!-- item end -->
+
+            <div class="row item">
+                <div class="twelve columns">
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781757">
+                        <img src="images/portfolio/certificates/INTUIT-4.jpg" alt="Углубленное программирование на Java">
+                    </a>
+                </div>
+            </div> <!-- item end -->
+
+            <div class="row item">
+                <div class="twelve columns">
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781854">
+                        <img src="images/portfolio/certificates/INTUIT-5.jpg" alt="Язык программирования PHP">
+                    </a>
+                </div>
+            </div> <!-- item end -->
+
+            <div class="row item">
+                <div class="twelve columns">
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781846">
+                        <img src="images/portfolio/certificates/INTUIT-6.jpg" alt="Введение в программирование на Delphi">
+                    </a>
+                </div>
+            </div> <!-- item end -->
+
         </div> <!-- main-col end -->
 
     </div> <!-- End Education -->
